@@ -8,3 +8,5 @@ DATA:
   - type: formula 5
     range: 0.450 0.656
     coefficients: 1.6708 0.0081 -2 0.0024 -4
+SPECS:
+    temperature: 25 °C
