@@ -8,3 +8,5 @@ DATA:
   - type: formula 5
     range: 0.450 0.656
     coefficients: 1.5139 0.0052 -2 0.0008 -4
+SPECS:
+    temperature: 25 °C
