@@ -8,3 +8,5 @@ DATA:
   - type: formula 5
     range: 0.450 0.656
     coefficients: 1.5801 0.0073 -2 0.0003 -4
+SPECS:
+    temperature: 25 °C
