@@ -8,3 +8,5 @@ DATA:
   - type: formula 5
     range: 0.450 0.656
     coefficients: 1.4718 0.0049 -2 0.0002 -4
+SPECS:
+    temperature: 25 °C
