@@ -8,3 +8,5 @@ DATA:
   - type: formula 5
     range: 0.450 0.656
     coefficients: 1.7282 0.0121 -2 0.0027 -4
+SPECS:
+    temperature: 25 °C
