@@ -8,3 +8,5 @@ DATA:
   - type: formula 5
     range: 0.450 0.656
     coefficients: 1.5006 0.0091 -2 0.0001 -4
+SPECS:
+    temperature: 25 °C
