@@ -8,3 +8,5 @@ DATA:
   - type: formula 5
     range: 0.450 0.656
     coefficients: 1.6933 0.0078 -2 0.0028 -4
+SPECS:
+    temperature: 25 °C
