@@ -8,3 +8,5 @@ DATA:
   - type: formula 5
     range: 0.450 0.656
     coefficients: 1.5397 0.0075 -2 1.03E-5 -4
+SPECS:
+    temperature: 25 °C
