@@ -8,3 +8,5 @@ DATA:
   - type: formula 5
     range: 0.450 0.656
     coefficients: 1.4601 0.0054 -2 3.15E-17 -4
+SPECS:
+    temperature: 25 °C
