@@ -8,3 +8,5 @@ DATA:
   - type: formula 5
     range: 0.450 0.656
     coefficients: 1.5359 0.0070 -2 4.02E-17 -4
+SPECS:
+    temperature: 25 °C
