@@ -8,3 +8,5 @@ DATA:
   - type: formula 5
     range: 0.450 0.656
     coefficients: 1.4600 0.0058 -2 3.95E-17 -4
+SPECS:
+    temperature: 25 °C
