@@ -8,3 +8,5 @@ DATA:
   - type: formula 5
     range: 0.450 0.656
     coefficients: 1.4740 0.0063 -2 6.04E-18 -4
+SPECS:
+    temperature: 25 °C
