@@ -8,3 +8,5 @@ DATA:
   - type: formula 5
     range: 0.450 0.656
     coefficients: 1.6772 0.0155 -2 0.0011 -4
+SPECS:
+    temperature: 25 °C
